--- a/humanCatInteract/src/index.html
+++ b/humanCatInteract/src/index.html
@@ -5,6 +5,7 @@
   <title>Human Cat Interact</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
